<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context=".adduser.AddUserActivity">

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/et_name"
        android:hint="@string/enter_your_name"
        android:maxLength="20"
        android:background="@color/white_text"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/btn_next"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_name"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textColor="@color/white_text"
        android:background="@color/colorPrimary"
        android:layout_width="150dp"
        android:layout_height="45dp" />
</RelativeLayout>