<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    tools:context=".userprofile.UserStatsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/label_pod_count"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="58dp"
        android:text="@string/pod_count" />

    <TextView
        android:id="@+id/tv_user_total_pods"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/label_pod_count"
        android:layout_gravity="center_horizontal"
        android:layout_toEndOf="@+id/label_pod_count"
        android:layout_toRightOf="@+id/label_pod_count"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/label_last_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_pod_count"
        android:layout_alignStart="@+id/label_pod_count"
        android:layout_below="@+id/label_pod_count"
        android:text="@string/last_month" />

    <TextView
        android:id="@+id/tv_user_last_month"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/tv_user_total_pods"
        android:layout_alignStart="@+id/tv_user_total_pods"
        android:layout_below="@+id/tv_user_total_pods"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/label_current_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_last_month"
        android:layout_alignStart="@+id/label_last_month"
        android:layout_below="@+id/tv_user_last_month"
        android:text="@string/current_month" />

    <TextView
        android:id="@+id/tv_user_current_month"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/tv_user_last_month"
        android:layout_alignStart="@+id/tv_user_last_month"
        android:layout_below="@+id/tv_user_last_month"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />

</RelativeLayout>
