...
        android:hint="@string/_0"
        android:textColorHint="@color/white_text"
        android:textColor="@color/white_text"
        android:id="@+id/tvPodCount"
        android:width="25dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/iv_stats_temp"
        android:layout_toStartOf="@+id/iv_stats_temp" />

    <ImageView
        android:id="@+id/iv_stats_temp"
        android:src="@drawable/ic_stats"
        android:layout_width="wrap_content"
...
